feat: total mining attempts for each miner.
