# docs/storage_swagger.json
@@ -1685,6 +1685,10 @@
                     "description": "Miner address",
                     "type": "string"
                 },
+                "miningAttempts": {
+                    "description": "Mining attempts",
+                    "type": "integer"
+                },
                 "timestamp": {
                     "description": "The block time when the latest reward event emits",
                     "type": "integer"
@@ -1692,6 +1696,10 @@
                 "totalReward": {
                     "description": "The total reward amount",
                     "type": "number"
+                },
+                "winCount": {
+                    "description": "Win count",
+                    "type": "integer"
                 }
             }
         },
@@ -1868,6 +1876,10 @@
                     "description": "Address on blockchain",
                     "type": "string"
                 },
+                "miningAttempts": {
+                    "description": "Mining attempts",
+                    "type": "integer"
+                },
                 "rank": {
                     "description": "Data ranking",
                     "type": "integer"
@@ -1876,7 +1888,7 @@
                     "description": "Reward amount",
                     "type": "number"
                 },
-                "totalWinCount": {
+                "winCount": {
                     "description": "Win count",
                     "type": "integer"
                 }
